[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ACCERT"
version = "0.1.0"
description = "The Algorithm for the Capital Cost Estimation of Reactor Technologies."
authors = [
    { name = "Argonne National Laboratory", email = "jia.zhou@anl.gov" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }

keywords = ["ACCERT"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/accert-dev/ACCERT"

[tool.setuptools.packages.find]
where = ["src"]
